--- a/css/style.css
+++ b/css/style.css
@@ -105,6 +105,7 @@ body{
 
 .main_block .content {
     overflow: hidden;
+
 }
 
 .main_block img {
@@ -115,7 +116,16 @@ body{
 }
 
 .main_block .content p {
-    margin: 0px;
+    margin: 10px;
     margin-left: 140px;
     text-align: justify;
 }
+
+.main_block .fulltag {
+    clear: both;
+    font-size: 10px;
+    color: #707070;
+    margin: 50px 0px 0px 0px;
+    padding: 3px;
+}
+
