--- a/css/style.css
+++ b/css/style.css
@@ -44,9 +44,9 @@ body{
 }
 
 #main{
-//border: 1px solid orange;
+ //border: 1px solid orange;
     height: 1200px;
-    margin-left: 230px;
+    margin-left: 245px;
     padding-top: 57px;
 }
 
@@ -77,7 +77,7 @@ body{
 }
 
 .main_block {
-    border: 1px solid black;
+
 }
 
 .main_block h3 {
@@ -131,4 +131,34 @@ body{
 
 .main_block .fulltag a:hover {
     text-decoration: none;
+    color: red;
+}
+
+.footer {
+    clear: both;
+    border-top: 2px solid #FF0000;
+    text-align: center;
+    line-height: 1.0em;
+    font-size: 95%;
+}
+
+.footer a {
+    text-decoration: none;
+    font-weight: bold;
+}
+
+a {
+    color: #003366;
+    background-color: inherit;
+    text-decoration: none;
+}
+
+a:hover {
+    color: #CC0001;
+    background-color: inherit;
+}
+
+p {
+    padding: 0;
+    margin: 10px;
 }
